bk_ida/gccida/c2/regno_clobbered_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regno_clobbered_p/src/reload.c:7291:55: error: must use 'enum' tag to refer to type 'machine_mode'
int  regno_clobbered_p( unsigned int regno, rtx insn, machine_mode mode, int sets) 
                                                      ^
                                                      enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regno_clobbered_p/src/reload.c:7308:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regno_clobbered_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regno_clobbered_p/src/reload.c:7324:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( unsigned __int16 *)insn[2]; 
                          ^~~~~~~
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/regno_clobbered_p/src/obj/reload.o] Error 1
